--- a/src/sass/footer.scss
+++ b/src/sass/footer.scss
@@ -3,6 +3,15 @@ footer {
   color: map-get($theme-colors, 'warning');
 }
 
+.row.footer-nav {
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  width: 100%;
+  margin: 0;
+}
+
 .footer-icon {
   margin: 0 0.2em;
+  color: map-get($theme-colors, 'primary');
 }
